[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/ui/Staatliches-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/lobby_menu/character_container.gd" type="Script" id=2]
[ext_resource path="res://menus/lobby_menu/character_view.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource( 1 )
HScrollBar/styles/grabber_highlight = SubResource( 2 )
HScrollBar/styles/grabber_pressed = SubResource( 3 )
HScrollBar/styles/scroll = SubResource( 4 )
HScrollBar/styles/scroll_focus = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.0745098 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.278431 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.203922 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 48
font_data = ExtResource( 1 )

[node name="CharacterContainer" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -400.0
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 600, 800 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
rect_min_size = Vector2( 600, 800 )
theme = SubResource( 6 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 600.0
margin_bottom = 800.0
custom_constants/separation = 0

[node name="CharacterView" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 3 )]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tween" type="Tween" parent="ScrollContainer"]

[node name="LeftButton" type="Button" parent="."]
visible = false
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 6.10352e-05
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 800 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ReadyOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 13 )
text = "READY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingForPressOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 800 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WaitingForPressOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37842
margin_right = 2.37842
custom_fonts/font = SubResource( 13 )
text = "Press anything to join"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectReadyContainer" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -299.0
margin_top = 3.0
margin_right = 300.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectButton" type="Button" parent="DisconnectReadyContainer"]
margin_right = 297.0
margin_bottom = 41.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyButton" type="Button" parent="DisconnectReadyContainer"]
margin_left = 301.0
margin_right = 599.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnreadyButton" type="Button" parent="."]
visible = false
margin_left = 1.0
margin_top = 803.0
margin_right = 600.0
margin_bottom = 844.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Unready"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="DisconnectReadyContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="pressed" from="DisconnectReadyContainer/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="UnreadyButton" to="." method="_on_UnreadyButton_pressed"]
